refactor: Replace hardcoded labels in `Settings` component with i18n translations
- Integrated `useTranslation` from `react-i18next` for dynamic translations in the `Settings` component.
- Updated tests to use localized strings instead of hardcoded labels.
- Adjusted German translation in `de.json` for app title.

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -1,5 +1,5 @@
 {
-  "app_title": "MetropolCon 2026 Programm-Guide",
+  "app_title": "MetropolCon 2026 Programm",
   "navigation": {
     "program": "Programm",
     "people": "Teilnehmende",
