test: Add unit tests for `FilterableProgram` component and integrate i18n translations
- Added comprehensive Vitest-based unit tests for the `FilterableProgram` component.
- Integrated `react-i18next` to replace hardcoded labels with localized i18n strings.
- Updated English (`en.json`) and German (`de.json`) translation files with relevant keys.

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -22,13 +22,16 @@
     }
   },
   "program": {
+    "listing": "Zeige",
+    "of": "von",
+    "items": "Programmpunkte",
     "limit": {
-      "label": "Maximal angezeigte Elemente",
-      "all_label": "Alle anzeigen"
-    },
-    "show_more": {
-      "label": "Mehr Elemente anzeigen",
-      "no_more": "Keine weiteren Elemente zum Anzeigen"
+      "label": "Maximal angezeigte Programmpunkte",
+      "all_label": "Alle anzeigen",
+      "show_more": {
+        "label": "Mehr Programmpunkte anzeigen",
+        "no_more": "Keine weiteren Programmpunkte zum Anzeigen"
+      }
     },
     "search": {
       "search_label": "Titel, Beschreibung oder Personen suchen"
