test: Add unit tests for `Footer` component and integrate i18n translations
- Introduced comprehensive Vitest-based unit tests for the `Footer` component to cover key functionalities.
- Replaced hardcoded markdown content with localized i18n strings using `react-i18next` (`useTranslation`).
- Updated English (`en.json`) and German (`de.json`) translation files with new keys for `Footer` component.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -186,6 +186,8 @@
     }
   },
   "footer": {
+    "site_note_markdown": "",
+    "copyright_markdown": "",
     "conclar_note_markdown": "Guide powered by [ConClár](https://github.com/lostcarpark/conclar)"
   },
   "debug_mode": {
