test: Add unit tests for `ProgramData` and `TagSelect` components, integrate i18n translations
- Introduced thorough Vitest-based unit tests for `ProgramData` and `TagSelect` components to validate key functionalities.
- Integrated `react-i18next` to replace hardcoded placeholders in `TagSelect` and localized them using `useTranslation`.
- Updated English (`en.json`) and German (`de.json`) translation files with new placeholders for tags.
- Refactored `TagSelect` to use dynamic translations for placeholders.

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -58,20 +58,12 @@
   },
   "tags": {
     "placeholder": "Tags auswählen",
-    "separate": [
-      {
-        "placeholder": "Bereich auswählen"
-      },
-      {
-        "placeholder": "Typ auswählen"
-      },
-      {
-        "placeholder": "Tag auswählen"
-      },
-      {
-        "placeholder": "Track auswählen"
-      }
-    ],
+    "separate": {
+      "placeholder_division": "Bereich auswählen",
+      "placeholder_type": "Typ auswählen",
+      "placeholder_tag": "Kategorie auswählen",
+      "placeholder_track": "Track auswählen"
+    },
     "day_tag": {
       "placeholder": "Tage auswählen",
       "days": {
