test: Add unit tests for `Person` and `ProgramList` components, integrate i18n translations
- Added comprehensive Vitest-based unit tests for `Person` and `ProgramList` components to validate their core functionalities.
- Integrated `react-i18next` to replace hardcoded labels and placeholders with localized i18n strings using `useTranslation`.
- Updated English (`en.json`) and German (`de.json`) translation files with new keys for `Person` and `ProgramList` components.
- Refactored `Person`, `ProgramList`, and `AppRoutes` to dynamically use i18n translations for labels and messages.

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -22,6 +22,7 @@
     }
   },
   "program": {
+    "no_items": "Keine Programmpunkte gefunden.",
     "listing": "Zeige",
     "of": "von",
     "items": "Programmpunkte",
