i18n: Add missing weekday translations for English and German locales

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -68,11 +68,13 @@
     "day_tag": {
       "placeholder": "Tage auswählen",
       "days": {
+        "3": "Mittwoch",
         "4": "Donnerstag",
         "5": "Freitag",
         "6": "Samstag",
         "7": "Sonntag",
-        "1": "Montag"
+        "1": "Montag",
+        "2": "Dienstag"
       }
     }
   },
