--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -68,11 +68,13 @@
     "day_tag": {
       "placeholder": "Select days",
       "days": {
+        "3": "Wednesday",
         "4": "Thursday",
         "5": "Friday",
         "6": "Saturday",
         "7": "Sunday",
-        "1": "Monday"
+        "1": "Monday",
+        "2": "Tuesday"
       }
     }
   },
