i18n: Add `select_locations` translation key and integrate into `FilterableProgram` component

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -22,6 +22,7 @@
     }
   },
   "program": {
+    "select_locations": "Ort auswählen",
     "no_items": "Keine Programmpunkte gefunden.",
     "listing": "Zeige",
     "of": "von",
