--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -22,6 +22,7 @@
     }
   },
   "program": {
+    "select_locations": "Select locations",
     "no_items": "No items found.",
     "listing": "Listing",
     "of": "of",
