test: Add unit tests for `TagSelectors` and `LocalTime` with i18n integration
- Added comprehensive Vitest-based unit tests for `TagSelectors` and `LocalTime` components.
- Integrated `react-i18next` to replace hardcoded labels and day names with localized i18n strings.
- Updated logic for `TagSelectors` to dynamically translate day labels using `useTranslation`.
- Enhanced German (`de.json`) translations for better consistency and accuracy.
- Refactored `LocalTime` to append localized "previous day" and "next day" labels when applicable.

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -32,7 +32,7 @@
       "all_label": "Alle anzeigen",
       "show_more": {
         "label": "Mehr Programmpunkte anzeigen",
-        "no_more": "Keine weiteren Programmpunkte zum Anzeigen"
+        "no_more": "Keine weiteren Programmpunkte vorhanden."
       }
     },
     "search": {
