docs: Revamp `info.md` with detailed MetropolCon 2026 info and legal notice
- Expanded `info.md` to include a comprehensive overview of MetropolCon, emphasizing inclusivity, diversity, and event details.
- Added German translations for event information to enhance accessibility.
- Included legal notice with organization details (Impressum) for compliance.
- Updated German (`de.json`) locale to refine footer text for consistency.

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -184,7 +184,7 @@
   "footer": {
     "site_note_markdown": "",
     "copyright_markdown": "",
-    "conclar_note_markdown": "Guide unterstützt durch [ConClár](https://github.com/lostcarpark/conclar)"
+    "conclar_note_markdown": "Unterstützt durch [ConClár](https://github.com/lostcarpark/conclar)"
   },
   "debug_mode": {
     "online_label": "Derzeit online",
