i18n: Add language selector and persist language preference
- Introduced a language selector in settings to allow users to choose between English, German, or browser default.
- Updated `Settings` component with language selection functionality using `react-i18next`.
- Persisted language preference with `localStorage` to retain user choice across sessions.
- Extended English (`en.json`) and German (`de.json`) translation files with new keys for language settings.
- Adjusted i18n initialization to use stored language or default to browser detection.

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -179,6 +179,12 @@
       "browser_dark_label": "Dunkel",
       "light_mode_label": "Immer Hell",
       "dark_mode_label": "Immer Dunkel"
+    },
+    "language": {
+      "label": "Sprache",
+      "browser_default_label": "Browser-Standard verwenden",
+      "en_label": "English",
+      "de_label": "Deutsch"
     }
   },
   "footer": {
